--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   width: 80vw;
   margin: 100px auto 20px;
+  height: calc(100vh - 300px);
 }
 
 div {
@@ -34,6 +35,7 @@ div > div {
   background: #27326b;
   border: 1px solid #dee2e6;
   border-radius: 4px;
+  overflow: unset;
 }
 
 
